--- a/experiment-game/.godot/editor/project_metadata.cfg
+++ b/experiment-game/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/Owner/Desktop/Godot_v4.4.1-stable_win64.exe"
+executable_path="C:/Users/Owner/Desktop/Code/Godot_v4.4.1-stable_win64.exe"
 
 [dialog_bounds]
 
@@ -19,3 +19,7 @@ last_selected_language="GDScript"
 [color_picker]
 
 picker_shape=3
+
+[project_settings]
+
+show_builtin_actions=false
