--- a/experiment-game/.godot/editor/editor_layout.cfg
+++ b/experiment-game/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/bullet.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/EnemyTest.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=323
+dock_hsplit_2=170
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -30,21 +30,22 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://game.tscn", "res://Scenes/Plane1.tscn", "res://Scenes/EnemyTest.tscn", "res://Scenes/bullet.tscn")
 current_scene="res://Scenes/bullet.tscn"
-center_split_offset=0
+center_split_offset=-349
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=2
-mode="maximized"
-position=Vector2i(1920, 23)
+mode="windowed"
+position=Vector2i(3641, 31)
+size=Vector2i(1718, 1360)
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/bullet.gd", "res://Scripts/EnemyTest.gd", "res://Scripts/PlayerPlane.gd"]
-selected_script="res://Scripts/bullet.gd"
+selected_script="res://Scripts/PlayerPlane.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
