--- a/experiment-game/.godot/editor/editor_layout.cfg
+++ b/experiment-game/.godot/editor/editor_layout.cfg
@@ -9,9 +9,9 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/EnemyTest.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://assets/")
-dock_node_current_tab=0
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/bullet.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/")
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=170
+dock_hsplit_2=253
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -28,28 +28,28 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game.tscn", "res://Scenes/Plane1.tscn", "res://Scenes/EnemyTest.tscn", "res://Scenes/bullet.tscn")
-current_scene="res://Scenes/bullet.tscn"
-center_split_offset=-349
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+open_scenes=PackedStringArray("res://game.tscn", "res://Scenes/Plane1.tscn", "res://Scenes/EnemyTest.tscn", "res://Scenes/bullet.tscn", "res://Scenes/vitals_ui.tscn")
+current_scene="res://Scenes/Plane1.tscn"
+center_split_offset=-307
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=2
 mode="windowed"
-position=Vector2i(3641, 31)
-size=Vector2i(1718, 1360)
+position=Vector2i(1921, 31)
+size=Vector2i(2315, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/bullet.gd", "res://Scripts/EnemyTest.gd", "res://Scripts/PlayerPlane.gd"]
+open_scripts=["res://Scripts/bullets.gd", "res://Scripts/EnemyTest.gd", "res://Scripts/vitals.gd", "res://Scripts/vitals_ui.gd", "res://Scripts/PlayerPlane.gd"]
 selected_script="res://Scripts/PlayerPlane.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.14286
 
 [GameView]
 
