--- a/experiment-game/.godot/global_script_class_cache.cfg
+++ b/experiment-game/.godot/global_script_class_cache.cfg
@@ -1,1 +1,9 @@
-list=[]
+list=[{
+"base": &"Control",
+"class": &"VitalsUI",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/vitals_ui.gd"
+}]
