--- a/experiment-game/.godot/editor/editor_layout.cfg
+++ b/experiment-game/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/bullet.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/planeA.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://assets/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,24 +28,23 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game.tscn", "res://Scenes/Plane1.tscn", "res://Scenes/EnemyTest.tscn", "res://Scenes/bullet.tscn", "res://Scenes/vitals_ui.tscn")
-current_scene="res://Scenes/Plane1.tscn"
+open_scenes=PackedStringArray("res://game.tscn", "res://Scenes/Plane1.tscn", "res://Scenes/EnemyTest.tscn", "res://Scenes/bullet.tscn", "res://Scenes/vitals_ui.tscn", "res://Scenes/planeA.tscn")
+current_scene="res://Scenes/planeA.tscn"
 center_split_offset=-307
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
-screen=2
-mode="windowed"
-position=Vector2i(1921, 31)
+screen=0
+mode="maximized"
+position=Vector2i(0, 214)
 size=Vector2i(2315, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/bullets.gd", "res://Scripts/EnemyTest.gd", "res://Scripts/vitals.gd", "res://Scripts/vitals_ui.gd", "res://Scripts/PlayerPlane.gd"]
-selected_script="res://Scripts/PlayerPlane.gd"
+open_scripts=["res://Scripts/bullets.gd", "res://Scripts/EnemyTest.gd", "res://Scripts/PlayerPlane.gd", "res://Scripts/vitals.gd", "res://Scripts/vitals_ui.gd"]
+selected_script="res://Scripts/EnemyTest.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -53,8 +52,8 @@ zoom_factor=1.14286
 
 [GameView]
 
-floating_window_rect=Rect2i(3058, 331, 1164, 695)
-floating_window_screen=2
+floating_window_rect=Rect2i(378, 342, 1164, 695)
+floating_window_screen=0
 
 [ShaderEditor]
 
